Fixed odd spacing inside toggles.

--- a/themes/rtbo/assets/css/_base.scss
+++ b/themes/rtbo/assets/css/_base.scss
@@ -80,8 +80,8 @@ img {
     display: none;
   }
 
-    display: flex;
   &:checked + * {
+    display: block;
   }
 }
 
